--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,10 +24,12 @@ jobs:
       - uses: actions/checkout@v3
 
 
-      - name: Run a one-line script
-        run: echo Olá, mundo!
+      - name: Install dependencies
+        run: npm install
 
+      - name: Install Commitlint
+        run: npm install @commitlint/{config-conventional,cli}
 
-      - name: Validate Conventional Commits
-        run: |
-        git log --format="%s" ${{ github.event.before }}..${{ github.sha }} | grep -E '^(feat|fix|docs|style|refactor|perf|test|build|ci)(\(.+\))?: .+' || (echo "Error: Commits should follow Conventional Commits convention." && exit 1)
+      - name: Validate Commit Messages
+        run: npx commitlint --from HEAD~1
+
