--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,16 +24,16 @@ jobs:
       - uses: actions/checkout@v3
 
 
-      - name: Install backend dependencies
-        working-directory: ./neskschool/src/back-end
-        run: npm install
+      #- name: Install backend dependencies
+      # working-directory: ./neskschool/src/back-end
+       # run: npm install
 
-      - name: Change permissions for nodemon
-        run: chmod +x ./neskschool/src/back-end/node_modules/.bin/nodemon
+      #- name: Change permissions for nodemon
+      #  run: chmod +x ./neskschool/src/back-end/node_modules/.bin/nodemon
 
-      - name: Run backend
-        working-directory: ./neskschool/src/back-end
-        run: npm run dev
+     # - name: Run backend
+      #  working-directory: ./neskschool/src/back-end
+      #  run: npm run dev
 
       - name: Install frontend dependencies
         working-directory: ./neskschool/src/front-end
