--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,16 +24,29 @@ jobs:
       - uses: actions/checkout@v3
 
 
-      #- name: Install backend dependencies
-      # working-directory: ./neskschool/src/back-end
-       # run: npm install
+      - name: Install backend dependencies
+        working-directory: ./neskschool/src/back-end
+        run: npm install
 
-      #- name: Change permissions for nodemon
-      #  run: chmod +x ./neskschool/src/back-end/node_modules/.bin/nodemon
+      - name: Change permissions for nodemon
+        run: chmod +x ./neskschool/src/back-end/node_modules/.bin/nodemon
 
-     # - name: Run backend
-      #  working-directory: ./neskschool/src/back-end
-      #  run: npm run dev
+      - name: Run backend
+        working-directory: ./neskschool/src/back-end
+        run: npm run dev
+
+      - name: Wait for backend to start
+        run: sleep 30 
+
+      - name: Check if backend is running
+        run: |
+          response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080)
+          if [ "$response" -eq 200 ]; then
+            echo "Backend is running."
+          else
+            echo "Backend is not running. HTTP status code: $response"
+            exit 1
+          fi
 
       - name: Install frontend dependencies
         working-directory: ./neskschool/src/front-end
@@ -42,6 +55,19 @@ jobs:
       - name: Run frontend
         working-directory: ./neskschool/src/front-end
         run: npm run start
+
+      - name: Wait for frontend to start
+        run: sleep 30 
+
+      - name: Check if frontend is running
+        run: |
+          response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:3000)
+          if [ "$response" -eq 200 ]; then
+            echo "Frontend is running."
+          else
+            echo "Frontend is not running. HTTP status code: $response"
+            exit 1
+          fi
 
 
 
